--- a/templates/game.html
+++ b/templates/game.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Game</title>
+    <link href="../static/game.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+    <div class="main">
+        <div class="title"><h1>MEMO GAME</h1></div>
+        <div class="time_box"></div>
+        <div class="highest_score_box"></div>
+        <div class="move_box"></div>
+        <div class="stop_time"></div>
+        <div class="username"></div>
+        <div class="back_to_menu"></div>
+        <div class="board"></div>
+    </div>
 </body>
 </html>
