create css and html

--- a/static/game.css
+++ b/static/game.css
@@ -1,5 +1,4 @@
 .main {
-    background-color: #ff0000;
     display: grid; /* div changed to grid */
     grid-template-columns: repeat(3, 1fr); /*how many columns*/
     grid-template-rows: 70px 70px 70px 450px; /*how many rows*/
@@ -7,55 +6,65 @@
 }
 
 .title {
-    background-color: #00cc00;
     text-align: center; /* title on the center */
     grid-column: 1/4; /*range columns*/
     grid-row: 1; /*range rows*/
 }
 
 .time_box {
-    background-color: #30799B;
     text-align: center; /* title on the center */
     grid-column: 1; /*range columns*/
     grid-row: 2; /*range rows*/
+    border-radius: 10px; /* corner round */
+    border-style: solid; /* div border */
+    border-color: black;
 }
 
 .highest_score_box {
-    background-color: #cc0099;
+
     grid-column: 2;
     grid-row: 2;
     text-align: center;
 }
 
 .move_box {
-    background-color: #0033cc;
     grid-column: 3;
     grid-row: 2;
-    text-align: left;
+    border-radius: 10px; /* corner round */
+    border-style: solid; /* div border */
+    border-color: black;
+    text-align: center; /* title on the center */
 }
 
 .stop_time {
-    background-color: #ffff00;
     grid-column: 1;
     grid-row: 3;
+    text-align: center; /* title on the center */
 }
 
 .username {
-    background-color: #3A7734;
     grid-column: 2;
     grid-row: 3;
+    text-align: center; /* title on the center */
 }
 
 .back_to_menu {
-    background-color: #ffbf80;
     grid-column: 3;
     grid-row: 3;
     text-align: center;
 }
 
 .board {
-    background-color: #C76700;
     grid-column: 1/4;
     grid-row: 4;
     text-align: center;
+}
+
+.button{
+    border-radius: 10px; /* corner round */
+    border-style: solid; /* div border */
+    border-color: black;
+    text-align: center; /* title on the center */
+    font-size: 20px;
+    padding: 10px 10px;
 }
