--- a/templates/game.html
+++ b/templates/game.html
@@ -8,12 +8,18 @@
 <body>
     <div class="main">
         <div class="title"><h1>MEMO GAME</h1></div>
-        <div class="time_box"></div>
-        <div class="highest_score_box"></div>
-        <div class="move_box"></div>
-        <div class="stop_time"></div>
-        <div class="username"></div>
-        <div class="back_to_menu"></div>
+        <div class="time_box"><h3>Time left:</h3></div>
+        <div class="highest_score_box"><h4>Highest score:</h4></div>
+        <div class="move_box"><h3>Total moves:</h3></div>
+        <div class="stop_time">
+            <button class="button">STOP TIME</button>
+        </div>
+        <div class="username"><h4>Your name:</h4></div>
+        <div class="back_to_menu">
+            <form action="index.html">
+                <input class="button" type="submit" value="BACK TO  MENU">
+            </form>
+        </div>
         <div class="board"></div>
     </div>
 </body>
