--- a/templates/game.html
+++ b/templates/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Game</title>
     <link href="../static/game.css" rel="stylesheet" type="text/css">
+    <script src="../js/game.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="main">
