score-page layout

--- a/templates/scores.html
+++ b/templates/scores.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Highest score</title>
+    <link rel="stylesheet" href="../static/scores-style.css" type="text/css">
 </head>
 <body>
-
+    <div class="flex-container">
+        <div class="flex-item">HIGHEST SCORE</div>
+        <div class="player"></div>
+    </div>
+    <div class="footer">
+        <form action="index.html">
+            <button class="button">BACK TO MAIN MENU</button>
+        </form>
+    </div>
 </body>
 </html>
