create function lose_with_timeout

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                     <h1 class="select-text">Select level</h1>
                 </div>
                 <div>
-                    <select name="level of difficulty" class="select">
+                    <select name="level_of_difficulty" class="select">
                         <option value="easy">Easy</option>
                         <option value="normal">Normal</option>
                         <option value="hard">Hard</option>
@@ -28,13 +28,13 @@
                     <h1 class="select-text">Do you want time limit</h1>
                 </div>
                 <div>
-                    <select name="is time" class="select">
+                    <select name="is_time" class="select">
                         <option value="yes">Yes</option>
                         <option value="no">No</option>
                     </select>
                 </div>
                 <div>
-                    <button name="start_game" class="start_game_button">Start Game</button>
+                    <input type="submit" name="start_game" class="start_game_button" value="Start Game">
                 </div>
             </form>
         </div>
