--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,12 @@
         <div class="welcome">
             <form action="game.html">
                 <div>
+                    <h1 class="select-text">Enter your name</h1>
+                </div>
+                <div>
+                    <input type="text" name="user-name" class="select">
+                </div>
+                <div>
                     <h1 class="select-text">Select level</h1>
                 </div>
                 <div>
