--- a/templates/scores.html
+++ b/templates/scores.html
@@ -8,7 +8,13 @@
 <body>
     <div class="flex-container">
         <div class="flex-item">HIGHEST SCORE</div>
-        <div class="player"></div>
+        <div class="player">player name</div>
+        <div class="scores"></div>
+        <div class="scores"></div>
+        <div class="scores"></div>
+        <div class="scores"></div>
+        <div class="scores"></div>
+        <div class="scores"></div>
     </div>
     <div class="footer">
         <form action="index.html">
