--- a/static/game.css
+++ b/static/game.css
@@ -68,3 +68,18 @@
     font-size: 20px;
     padding: 10px 10px;
 }
+
+/*kuba b*/
+/*===========*/
+
+.element {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+}
+
+img {
+    width: 80px;
+    height: 100px;
+}
+/*==========*/
