create function stop_the_time

--- a/templates/game.html
+++ b/templates/game.html
@@ -13,7 +13,7 @@
         <div class="highest_score_box"><h4>Highest score:</h4></div>
         <div class="move_box"><h3>Total moves:</h3></div>
         <div class="stop_time">
-            <button class="button">STOP TIME</button>
+            <button id="time_button" class="button">STOP TIME</button>
         </div>
         <div class="username"><h4>Your name:</h4></div>
         <div class="back_to_menu">
