--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="background-box">
-        <div class="welcome">
-            <h1 class="welcome-text">Welcome</h1>
-        </div>
+<!--        <div class="welcome">-->
+<!--            <h1 class="welcome-text">Welcome</h1>-->
+<!--        </div>-->
         <div class="welcome">
             <form action="game.html">
                 <div>
@@ -20,25 +20,23 @@
                 <div>
                     <input type="text" name="user-name" class="select">
                 </div>
-                <div>
-                    <h1 class="select-text">Select level</h1>
-                </div>
-                <div>
-                    <select name="level_of_difficulty" class="select">
-                        <option value="easy">Easy</option>
-                        <option value="normal">Normal</option>
-                        <option value="hard">Hard</option>
-                    </select>
-                </div>
-                <div>
-                    <h1 class="select-text">Do you want time limit</h1>
-                </div>
-                <div>
-                    <select name="is_time" class="select">
-                        <option value="yes">Yes</option>
-                        <option value="no">No</option>
-                    </select>
-                </div>
+                <table id="menu-table">
+                    <tr>
+                        <td><h1 class="select-text">Select level</h1></td>
+                        <td><h1 class="select-text">Do you want time limit</h1></td>
+                    </tr>
+                    <tr>
+                        <td><select name="level_of_difficulty" class="select">
+                            <option value="easy">Easy</option>
+                            <option value="normal">Normal</option>
+                            <option value="hard">Hard</option>
+                        </select></td>
+                        <td><select name="is_time" class="select">
+                            <option value="yes">Yes</option>
+                            <option value="no">No</option>
+                        </select></td>
+                    </tr>
+                </table>
                 <div>
                     <input type="submit" name="start_game" class="start_game_button" value="Start Game">
                 </div>
