--- a/static/index.css
+++ b/static/index.css
@@ -23,7 +23,7 @@ img {
     background-color: white;
     border-radius: 0.2em;
     color: black;
-    font-family: Arial;
+    /*font-family: Arial;*/
     font-size: 2em;
     margin: 0 0 0.5em;
     padding: 10px 20px;
@@ -39,7 +39,7 @@ img {
     background-color: white;
     border-radius: 0.3em;
     color: black;
-    font-family: Arial;
+    /*font-family: Arial;*/
     font-size: 3em;
     margin: 1.5em 0 0;
     text-align: center;
