--- a/templates/index.html
+++ b/templates/index.html
@@ -34,11 +34,9 @@
                 <input type="submit" name="start_game" class="button_in_menu" value="Start Game">
             </div>
         </form>
-        <form action="scores.html">
             <div class="scores-button">
-                <input type="submit" name="scores" class="button_in_menu" value="Scores">
+                <button onclick="location.href='scores.html'" class="button_in_menu">Scores</button>
             </div>
-        </form>
     </div>
 </body>
 </html>
