refactor functions saveItemToSessionStorageWithoutTime and saveItemToSessionStorageWithTime

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                 <h1 class="select-text">Enter your name</h1>
             </div>
             <div class="input-text">
-                <input type="text" name="user-name" class="select">
+                <input type="text" name="user-name" class="select" required>
             </div>
             <div class="select-level">
                 <h1 class="select-text">Select level</h1>
