change index style

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,11 +31,11 @@
                 </select>
             </div>
             <div class="game-button">
-                <input type="submit" name="start_game" class="button_in_menu" value="Start Game">
+                <input type="submit" name="start_game" class="button" value="Start Game">
             </div>
         </form>
             <div class="scores-button">
-                <button onclick="location.href='scores.html'" class="button_in_menu">Scores</button>
+                <button onclick="location.href='scores.html'" class="button">Scores</button>
             </div>
     </div>
 </body>
