--- a/static/game.css
+++ b/static/game.css
@@ -2,7 +2,7 @@ body {
     background: url("https://cdn.wallpapersafari.com/26/38/suc4Nm.jpeg");
     padding: 25px;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .main {
