--- a/static/scores-style.css
+++ b/static/scores-style.css
@@ -47,20 +47,13 @@ body {
 
 .button {
     background-color: beige;
-    border-radius: 100px;
-    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
-    color: black;
-    cursor: pointer;
-    display: inline-block;
-    padding: 7px 20px;
-    text-align: center;
-    text-decoration: none;
-    transition: all 250ms;
-    border: 0;
-    font-size: 16px;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    border-radius: 10px; /* corner round */
+    border-style: solid; /* div border */
+    border-color: black;
+    text-align: center; /* title on the center */
+    font-size: 20px;
+    padding: 10px 10px;
 }
 
 .button:hover, .player:hover, .scores:hover {
