--- a/templates/scores.html
+++ b/templates/scores.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Highest score</title>
-    <link rel="stylesheet" href="../static/scores-style.css" type="text/css">
-    <script src="../js/game.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../static/css/scores-style.css" type="text/css">
+    <script src="../static/js/game.js" type="text/javascript"></script>
 </head>
 <body onload="displayAllHighestScores()">
     <div class="flex-container">
@@ -17,9 +17,9 @@
         <div id="hard-without-time" class="scores">Hard without time: </div>
     </div>
     <div class="footer">
-        <form action="index.html">
-            <button class="button">BACK TO MAIN MENU</button>
-        </form>
+
+            <button onclick="location.href='/main'" class="button">BACK TO MAIN MENU</button>
+
     </div>
 </body>
 </html>
